[package]
name = "vm-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Hakari-managed dependencies
vm-build-deps = { path = "../vm-build-deps" }
vm-core = { path = "../vm-core" }
vm-ir = { path = "../vm-ir" }
vm-mem = { path = "../vm-mem", optional = true }
vm-accel = { path = "../vm-accel", optional = true }

[features]
default = ["riscv64"]

# Single architecture features
x86_64 = []
arm64 = ["vm-accel"]  # ARM64 needs vm-accel for CPU detection
riscv64 = []

# RISC-V extensions
riscv-m = ["riscv64"]
riscv-f = ["riscv64"]
riscv-d = ["riscv64"]
riscv-c = ["riscv64"]
riscv-a = ["riscv64"]

# Multi-architecture combinations
all = ["x86_64", "arm64", "riscv64"]
all-extensions = ["all", "riscv-m", "riscv-f", "riscv-d", "riscv-c", "riscv-a"]

# Parallel processing support
parallel = []

# Dependencies
vm-mem = ["dep:vm-mem"]
vm-accel = ["dep:vm-accel"]
