[package]
name = "vm-gpu"
version = "0.1.0"
edition = "2024"
description = "GPU Acceleration and Virtualization for Virtual Machine"
authors = ["VM Team <team@vm-project.org>"]
license = "MIT OR Apache-2.0"

[dependencies]
vm-core = { path = "../vm-core" }
vm-monitor = { path = "../vm-monitor" }
vm-interface = { path = "../vm-interface" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
nvidia = []
amd = []
intel = []
