[package]
name = "vm-gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
