[package]
name = "vm-instruction-patterns"
version = "0.1.0"
edition = "2021"
description = "Common instruction pattern recognition for VM cross-architecture translation"

[dependencies]
vm-common = { path = "../vm-common" }
vm-core = { path = "../vm-core" }
vm-error = { path = "../vm-error" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
log = "0.4"
static_assertions = "1.1"

[features]
default = ["std"]
std = []
no_std = []
