[package]
name = "vm-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
vm-core = { path = "../vm-core" }
vm-ir = { path = "../vm-ir" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.48", features = ["rt-multi-thread", "sync"] }
parking_lot = "0.12"

[dev-dependencies]
vm-core = { path = "../vm-core" }
