[package]
name = "vm-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
vm-core = { path = "../vm-core" }
vm-ir = { path = "../vm-ir" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
parking_lot = { workspace = true }

[dev-dependencies]
vm-core = { path = "../vm-core" }
